--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- API key -->
     <script type="text/javascript" src="./static/js/config.js"></script>
     
-    <!-- cities -->
-    <script type="text/javascript" src="./static/js/cities.js"></script>
+    <!-- cities
+    <script type="text/javascript" src="./static/js/cities.js"></script> -->
     
     <!--  logic -->
     <script type="text/javascript" src="./static/js/logic.js"></script>
