--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 <body>
     <!-- Map div -->
     <div id="mapid"></div>
+    </div>
 
     <!-- Leaflet JavaScript -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
+
 
     <!-- API key -->
     <script type="text/javascript" src="./static/js/config.js"></script>
@@ -35,8 +37,8 @@
     <!-- cities -->
     <script type="text/javascript" src="./static/js/cities.js"></script>
     
-    <!--  logicStep4 -->
-    <script type="text/javascript" src="./static/js/logicStep4.js"></script>
+    <!--  logicStep5 -->
+    <script type="text/javascript" src="./static/js/logicStep5.js"></script>
 
      <!-- logic
     <script type="text/javascript" src="./static/js/logic.js"></script> -->
